# GpuRecSplit

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: build.yml
benchmark/: BenchmarkData.h  benchmark_construction.cpp  benchmark_construction.cu  benchmark_construction.hpp  csv_printer.hpp  recsplit_dump128.cu  recsplit_dump128.hpp
benchmark/function/: benchmark_construction.hpp  recsplit_dump128.cpp  recsplit_dump128.hpp
extlib/cmake-findsse/: FindSSE.cmake
include/function/: AbstractParallelRecSplit.hpp  DoubleEF.hpp  GPURecSplit.cuh  PartitionedSIMDRecSplit.h  RecSplit.hpp  RecSplitRotate.hpp  RiceBitVector.hpp  SIMDRecSplit.hpp  golombRiceMemo.hpp
include/shockhash/: ShockHash.h  TinyBinaryCuckooHashTable.h
include/support/: SpookyV2.hpp  common.hpp
include/util/: Expandable.hpp  Hash128.h  SimdUtils.hpp  Sorter.hpp  Vector.hpp
scripts/: leafMethods.sh  parameters.sh  scaling.sh  scalingB.sh  scalingL.sh  showcaseOverall.sh
scripts/dockerVolume/: brute-force-vs-rotations.sh  brute-force-vs-rotations.tex  figure-5.sh  figure-7.sh  table-1.sh
src/: Sorter.cpp
src/function/: AbstractParallelRecSplit.hpp  DoubleEF.hpp  GPURecSplit.cuh  RecSplit.hpp  RiceBitVector.hpp  SIMDRecSplit.hpp  golombRiceMemo.hpp
src/support/: common.hpp
src/support/vectorclass/: vectorf128.h  vectorf256.h  vectorf512.h  vectori128.h  vectori256.h  vectori512.h  vectori512s.h
src/util/: Expandable.hpp  SimdUtils.hpp  Vector.hpp
test/: GPUandSIMDequivalence.cu  correctness.cpp  correctness.cu  correctness.hpp  fastSplitTest.cpp  fillGolombRice.cpp  interactive.cpp  interactive.cu  interactive.hpp  numHashEvals.cpp  recsplitCorrectness.hpp
